--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -12,6 +12,9 @@
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="/users">Users</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="/users/new">New User</a>
+        </li>
       </ul>
     </div>
   </div>
